Header image fill width

--- a/presskit/css/master.css
+++ b/presskit/css/master.css
@@ -198,6 +198,8 @@ a:hover {
 
 .page-header img {
   display: block;
+  width: 100%;
+  height: auto;
 }
 
 /* ---------------------------------------------------------- *\
